@@ -3,11 +3,9 @@ import { Match } from '@lib/ui/base/Match'
 import { ComponentWithValueProps } from '@lib/ui/props'
 import { TasksSlice } from './TasksSlice'
 import { TimeTrackingSlice } from './TimeTrackingSlice'
-import { WorkBudgetSlice } from './WorkBudgetSlice'
 import { ProjectsBudgetSlice } from './ProjectsBudgetSlice'
 import { FocusSlice } from './FocusSlice'
 import { HabitsSlice } from './HabitsSlice'
-import { ScheduleSlice } from './ScheduleSlice'
 import { VisionSlice } from './VisionSlice'
 import { GoalsSlice } from './GoalsSlice'
 
@@ -18,11 +16,9 @@ export const ProductToolSlice = ({
     value={value}
     tasks={() => <TasksSlice />}
     trackTime={() => <TimeTrackingSlice />}
-    workBudget={() => <WorkBudgetSlice />}
     timePlanner={() => <ProjectsBudgetSlice />}
     focus={() => <FocusSlice />}
     habits={() => <HabitsSlice />}
-    schedule={() => <ScheduleSlice />}
     vision={() => <VisionSlice />}
     goals={() => <GoalsSlice />}
   />
