@@ -4,9 +4,7 @@ const productToolPageRecord: Partial<Record<ProductTool, string>> = {
   trackTime: '/time-tracking',
   focus: '/focus',
   tasks: '/tasks',
-  workBudget: '/work-budget',
   timePlanner: '/time-planner',
-  schedule: '/schedule',
   habits: '/habits',
 }
 
