@@ -1,3 +1,0 @@
-import { SchedulePage } from '../schedule/SchedulePage'
-
-export default SchedulePage
