@@ -1,3 +1,0 @@
-import { WorkBudgetPage } from '../workBudget/WorkBudgetPage'
-
-export default WorkBudgetPage
