@@ -24,11 +24,9 @@ Increaser consists of the following primary tools:
 - Goals
 - Time tracking
 - Task management
-- Work budgeting
 - Time planning
 - Focus
 - Habit tracking
-- Scheduling
 
 Each tool has a dedicated page within the app and a corresponding section on the website.
 
@@ -122,6 +120,8 @@ When the report is grouped by days, next to the average day there is also an ave
 When the report is grouped by days, the user has the option to see the "Sessions" view, where instead of a bar chart, they see sessions grouped by days. Sessions are colored according to the projects they belong to. When the user selects a specific project, sessions for other projects will be grayed out.
 
 When the report is grouped by days and no project selected the user can see when the workday started and ended for a specific day.
+
+When the report is grouped by days, the user can see a line with their preffered end of work time.
 
 ## Habits
 
