@@ -2,6 +2,7 @@ Added a "Sessions" view for daily reports, displaying sessions grouped by day an
 Improved tracked time report to be more space-efficient and comfortable to navigate.
 Added average workday and weekend time display next to the average day when the tracked time report is grouped by days.
 Added start and end times for each workday when viewing daily reports with no project selected.
+Added a line indicator for preferred end of work time when viewing daily reports in the Timesheet.
 The tracked time report now remembers the selected interval for each time grouping. For example, if you change the interval on the "grouped by weeks" view, it won’t affect the interval setting on the "grouped by days" view.
 1730944392505
 Added a new option to switch the Goals timeline view between age-based and date-based formats.
